--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"nodemon": "^3.0.2"
+		"eslint": "^8.56.0",
+		"nodemon": "^3.0.2",
+		"standard": "^17.1.0"
 	},
 	"dependencies": {
 		"express": "^4.18.2"
