--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon app.js"
+		"dev": "nodemon app.js",
+		"start": "node app.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,6 +18,7 @@
 		"standard": "^17.1.0"
 	},
 	"dependencies": {
+		"axios": "0.21.1",
 		"express": "^4.18.2"
 	}
 }
