--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "mocha test/**/*.js",
 		"dev": "nodemon app.js",
 		"start": "node app.js"
 	},
@@ -13,7 +13,9 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"chai": "^4.3.10",
 		"eslint": "^8.56.0",
+		"mocha": "^10.2.0",
 		"nodemon": "^3.0.2",
 		"standard": "^17.1.0"
 	},
@@ -21,5 +23,10 @@
 		"axios": "0.21.1",
 		"csv-parser": "^3.0.0",
 		"express": "^4.18.2"
-	}
+	},
+  "standard": {
+    "ignore": [
+      "test/**/*.js"
+    ]
+  }
 }
