--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"eslint": "^8.56.0",
 		"mocha": "^10.2.0",
 		"nodemon": "^3.0.2",
+		"sinon": "^17.0.1",
 		"standard": "^17.1.0"
 	},
 	"dependencies": {
@@ -24,9 +25,9 @@
 		"csv-parser": "^3.0.0",
 		"express": "^4.18.2"
 	},
-  "standard": {
-    "ignore": [
-      "test/**/*.js"
-    ]
-  }
+	"standard": {
+		"ignore": [
+			"test/**/*.js"
+		]
+	}
 }
